// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:listing > basic 1`] = `
"<div class="listingblock">
<div class="content">
<pre>echo -n "Please enter your name: "
read name
echo "Hello, $name!"</pre>
</div>
</div>"
`;

exports[`DocTest:listing > basic-nowrap 1`] = `
"<div class="listingblock">
<div class="content">
<pre class="nowrap">ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"</pre>
</div>
</div>"
`;

exports[`DocTest:listing > basic-with-id-and-role 1`] = `
"<div id="code" class="listingblock example">
<div class="content">
<pre>echo -n "Please enter your name: "
read name
echo "Hello, $name!"</pre>
</div>
</div>"
`;

exports[`DocTest:listing > basic-with-title 1`] = `
"<div class="listingblock">
<div class="title">Reading user input</div>
<div class="content">
<pre>echo -n "Please enter your name: "
read name
echo "Hello, $name!"</pre>
</div>
</div>"
`;

exports[`DocTest:listing > source 1`] = `
"<div class="listingblock">
<div class="content">
<pre><code class="highlight plaintext">5.times do
  print &quot;Odelay!&quot;
end</code></pre>
</div>
</div>"
`;

exports[`DocTest:listing > source-nowrap 1`] = `
"<div class="listingblock">
<div class="content">
<pre class="nowrap"><code class="highlight plaintext">public class ApplicationConfigurationProvider extends HttpConfigurationProvider &#123;

  public Configuration getConfiguration(ServletContext context) &#123;
    return ConfigurationBuilder.begin()
              .addRule()
              .when(Direction.isInbound().and(Path.matches(&quot;/&#123;path&#125;&quot;)))
              .perform(Log.message(Level.INFO, &quot;Client requested path: &#123;path&#125;&quot;))
              .where(&quot;path&quot;).matches(&quot;.*&quot;);
  &#125;
&#125;</code></pre>
</div>
</div>"
`;

exports[`DocTest:listing > source-with-language 1`] = `
"<div class="listingblock">
<div class="content">
<pre><code class="highlight ruby"><span class="number">5</span>.times <span class="keyword">do</span>
  print <span class="string">&quot;Odelay!&quot;</span>
<span class="keyword">end</span></code></pre>
</div>
</div>"
`;

exports[`DocTest:listing > source-with-title 1`] = `
"<div class="listingblock">
<div class="title">Odelay!</div>
<div class="content">
<pre><code class="highlight plaintext">5.times do
  print &quot;Odelay!&quot;
end</code></pre>
</div>
</div>"
`;
